--- a/templates/demo.html
+++ b/templates/demo.html
@@ -10,7 +10,7 @@
 <!-- Banner -->
 <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 	<div class="content">
-		<h1>Story</h1>
+		<h1>zStory</h1>
 		<p class="major">A (modular, highly tweakable) responsive one-page template for Zola (can be done as multi-pages too) based on Story by <a href='https://html5up.net/story'>HTML5 UP</a>.</p>
 		<p>This is a <strong>Banner</strong> element, and it's generally used as an introduction or opening statement. You can customize its <span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an optional <code>onload</code> or <code>onscroll</code> transition modifier (<a href="#reference-banner">details</a>).</p>
 		<ul class="actions stacked">
